Altered CSS to stop delay in canvas resize causing jarring layout shift on page load.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -19,6 +19,11 @@ body {
 	
 }
 
+#canvas_wrapper {
+	width: 800px;
+	height: 500px;
+}
+
 #canvas {
 	border: 2px solid #333;
 	display: none;
